<resources>
    <string name="app_name">Ecommerce App DevHack</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="create_account">Create your Account</string>
    <string name="names">Names</string>
    <string name="cellphone">Cell Phone Number</string>
    <string name="field_required">Este campo es requerido</string>
    <string name="long_max">Es muy largo el texto</string>
    <string name="wait_please">Espera un momento por favor</string>
    <string name="loading">Cargando</string>
    <string name="lbl_signup">Sign up</string>
    <string name="lbl_verification_email">Verification mail sent to email</string>

    <string name="facebook_app_id">415914175535570</string>
    <string name="fb_login_protocol_scheme">fb415914175535570</string>
    <string name="error_auth_facebook">Error Auth Facebook</string>
    <string name="lbl_login_link_email">Send Email Link Sign In</string>
    <string name="message_email_link_sent">Email Link Sign-in Sent</string>
    <string name="title_activity_products">ProductsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_name_product">Product Name</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_product_price">Product Price $$</string>
    <string name="lbl_create_product">Save Product</string>
    <string name="lbl_add_product">Crear Producto</string>
    <string name="lbl_signout">Sign Out</string>
    <string name="lbl_image_mandatory">Image Mandatory</string>
    <string name="lbl_fetch_failed">Fetch Failed</string>
    <string name="lbl_cant_create_products">it is not possible to create products</string>

</resources>
